# torch_flatbuffers

./: .gitignore  Layer.py  Layers.py  elo.ipynb  install.sh  pyproject.toml  requirements.txt
torch_flatbuffers/: export.py  import.py  importer.py  test.py
torch_flatbuffers/schemes/: Layer.py  Layers.py  layers.fbs  layers_generated.swift
torch_flatbuffers/tests/: test.py
