#[tool.poetry]
#name = "torch_flatbuffers"
#version = "0.1.0"
#description = ""
#authors = ["Dawid Kobus <machineko@protonmail.com>"]
#
#[tool.poetry.dependencies]
#python = "3.9"
#numpy = "^1.23.1"
#torch = "^1.12.0"
#flatbuffers = "^2.0"
#coremltools = "6.0b1"
#
#[tool.poetry.dev-dependencies]
#black = "^22.6.0"
#
#
#[tool.pdm]
#[tool.pdm.dev-dependencies]
#dev = [
#    "black<23.0.0,>=22.6.0",
#]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "torch_flatbuffers"
version = "0.1.0"
description = ""
authors = [
    {name = "Dawid Kobus", email = "machineko@protonmail.com"},
    {name = "Dawid Kobus",email = "machineko@protonmail.com"},
]
dependencies = ["numpy<2.0.0,>=1.23.1", "torch<2.0.0,>=1.12.0", "flatbuffers<3.0,>=2.0", "coremltools==6.0b1"]
requires-python = ">=3.9,<3.11.1"
license = {text = "MIT"}

[project.urls]
