[tool.poetry]
name = "torch_flatbuffers"
version = "0.1.1"
description = ""
authors = ["Dawid Kobus <machineko@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
torch = "^1.12.0"
flatbuffers = "^2.0"
# coremltools = "6.0b1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

#
